--- a/app/src/main/res/layout/fragment_ubication.xml
+++ b/app/src/main/res/layout/fragment_ubication.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.UbicationFragment">
+    tools:context=".view.ui.fragments.UbicationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <fragment
+        android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
 </FrameLayout>
