--- a/app/src/main/res/layout/fragment_ubication_detail_dialog.xml
+++ b/app/src/main/res/layout/fragment_ubication_detail_dialog.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -13,14 +14,17 @@
     </com.google.android.material.appbar.AppBarLayout>
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ScrollView
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp">
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -32,36 +36,41 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardCornerRadius="4dp"
-                    app:cardElevation="1dp"
+                    android:cardElevation="1dp"
                     android:layout_margin="15dp">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:background="@drawable/shape_parrafo">
                         <TextView
-                            android:id="@+id/tvDetailConferenceHour"
+                            android:id="@+id/tvDetailNombreLugar"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Lugar PlatziConf"
                             android:textSize="30sp"
-                            android:textStyle="bold"
                             android:textColor="@color/colorPrimary"
+                            android:textStyle="bold"
                             android:gravity="center_horizontal"
                             android:layout_margin="5dp"/>
-
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:background="@color/colorPrimary"/>
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
                             android:padding="20dp">
-                           <ImageView
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content"
-                               android:src="@drawable/ic_pin"/>
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/ic_pin"/>
                             <TextView
+                                android:id="@+id/tvUbicationDireccion"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Direccion"
+                                android:text="Dirección"
                                 android:textSize="15sp"
                                 android:textColor="@color/colorPrimary"
                                 android:gravity="left"
@@ -71,9 +80,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:background="@color/colorPrimary"/>
-
-
                         <LinearLayout
+                            android:id="@+id/llTelefonoLugar"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -83,9 +91,10 @@
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_phone"/>
                             <TextView
+                                android:id="@+id/tvUbicationTelefono"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Telefono lugar"
+                                android:text="Teléfono lugar"
                                 android:textSize="15sp"
                                 android:textColor="@color/colorPrimary"
                                 android:gravity="left"
@@ -95,8 +104,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:background="@color/colorPrimary"/>
-
                         <LinearLayout
+                            android:id="@+id/llSitioWeb"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal"
@@ -106,9 +115,10 @@
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/ic_link"/>
                             <TextView
+                                android:id="@+id/tvUbicationWebsite"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Sitio Web"
+                                android:text="Sitio web"
                                 android:textSize="15sp"
                                 android:textColor="@color/colorPrimary"
                                 android:gravity="left"
@@ -118,10 +128,13 @@
                             android:layout_width="match_parent"
                             android:layout_height="1dp"
                             android:background="@color/colorPrimary"/>
+
+
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
+
             </LinearLayout>
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
     </FrameLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
