--- a/app/src/main/res/menu/btv_menu.xml
+++ b/app/src/main/res/menu/btv_menu.xml
@@ -3,17 +3,17 @@
     <item
         android:id="@+id/navHomeFragment"
         android:title="Inicio"
-        android:icon="@drawable/ic_home" />
+        android:icon="@drawable/ic_baseline_home_24"/>
     <item
         android:id="@+id/navScheduleFragment"
         android:title="Cronograma"
-        android:icon="@drawable/ic_schedule" />
+        android:icon="@drawable/ic_schedule"/>
     <item
         android:id="@+id/navSpeakersFragment"
         android:title="Expositores"
-        android:icon="@drawable/ic_speakers" />
+        android:icon="@drawable/ic_speakers"/>
     <item
         android:id="@+id/navMapFragment"
         android:title="Mapa"
-        android:icon="@drawable/ic_map" />
+        android:icon="@drawable/ic_map"/>
 </menu>
