--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navHomeFragment"
-        android:name="com.platzi.conf.ui.fragments.HomeFragment"
+        android:name="com.platzi.conferenciasapp.view.ui.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -16,19 +16,19 @@
     </fragment>
     <fragment
         android:id="@+id/navScheduleFragment"
-        android:name="com.platzi.conf.ui.fragments.ScheduleFragment"
+        android:name="com.platzi.conferenciasapp.view.ui.fragments.ScheduleFragment"
         android:label="fragment_schedule"
         tools:layout="@layout/fragment_schedule" >
         <action
             android:id="@+id/action_scheduleFragment_to_speakersFragment"
             app:destination="@id/navSpeakersFragment" />
         <action
-            android:id="@+id/action_navScheduleFragment_to_scheduleDetailDialogFragment2"
-            app:destination="@id/scheduleDetailDialogFragment2" />
+            android:id="@+id/action_navScheduleFragment_to_scheduleDetailFragmentDialog"
+            app:destination="@id/scheduleDetailFragmentDialog" />
     </fragment>
     <fragment
         android:id="@+id/navSpeakersFragment"
-        android:name="com.platzi.conf.ui.fragments.SpeakersFragment"
+        android:name="com.platzi.conferenciasapp.view.ui.fragments.SpeakersFragment"
         android:label="fragment_speakers"
         tools:layout="@layout/fragment_speakers" >
         <action
@@ -40,27 +40,28 @@
     </fragment>
     <fragment
         android:id="@+id/navMapFragment"
-        android:name="com.platzi.conf.ui.fragments.UbicationFragment"
+        android:name="com.platzi.conferenciasapp.view.ui.fragments.UbicationFragment"
         android:label="fragment_ubication"
         tools:layout="@layout/fragment_ubication" >
         <action
-            android:id="@+id/action_navMapFragment_to_ubicationDetailDialogFragment"
+            android:id="@+id/action_navMapFragment_to_ubicationDetailFragmentDialog"
             app:destination="@id/ubicationDetailFragmentDialog" />
     </fragment>
 
     <dialog
         android:id="@+id/speakersDetailFragmentDialog"
-        android:name="com.platzi.conf.ui.fragments.SpeakersDetailDialogFragment"
-        android:label="SpeakerDetailFragmentDialog"
+        android:name="com.platzi.conferenciasapp.view.ui.fragments.SpeakersDetailDialogFragment"
+        android:label="SpeakersDetailFragmentDialog"
         tools:layout="@layout/fragment_speakers_detail_dialog"/>
     <dialog
-        android:id="@+id/scheduleDetailDialogFragment"
-        android:name="com.platzi.conf.ui.fragments.ScheduleDetailDialogFragment"
-        android:label="UbicationDetailDialogFragment"
+        android:id="@+id/scheduleDetailFragmentDialog"
+        android:name="com.platzi.conferenciasapp.view.ui.fragments.ScheduleDetailDialogFragment"
+        android:label="ScheduleDetailFragmentDialog"
         tools:layout="@layout/fragment_schedule_detail_dialog"/>
     <dialog
         android:id="@+id/ubicationDetailFragmentDialog"
-        android:name="com.platzi.conf.ui.fragments.UbicationDetailDialogFragment"
-        android:label="fragment_maps_detail_dialog"
+        android:name="com.platzi.conferenciasapp.view.ui.fragments.UbicationDetailDialogFragment"
+        android:label="UbicationDetailFragmentDialog"
         tools:layout="@layout/fragment_ubication_detail_dialog"/>
+
 </navigation>
